- fixed bug in CPLEX interface with getting basis information after the LP was modified and restored
- fixed bug in knapsack separator with empty initial covers
- fixed bug that SCIPgetLPSolstat() returns a valid status code even if the LP was not yet constructed for the
  current node


SCIP version 0.81
=================

examples:
- added two small pricer examples (for C and C++)
- updated example code (s.t. it compiles again)

interface:
- new method SCIPgetCuts()
- callback method CONSSEPA of constraint handler was split into two methods CONSSEPALP and CONSSEPASOL
- replaced method SCIPconshdlrWasSeparationDelayed() by two methods SCIPconshdlrWasLPSeparationDelayed()
  and SCIPconshdlrWasSolSeparationDelayed()
- callback method SEPAEXEC of separator was split into two methods SEPAEXECLP and SEPAEXECSOL
- replaced method SCIPsepaWasDelayed() by SCIPsepaWasLPDelayed() and SCIPsepaWasSolDelayed()
- additional parameter "sol" for methods SCIPaddCut(), SCIPgetCutEfficacy(), and SCIPisCutEfficacious()
- additional parameter "sol" for method SCIPseparateKnapsackCover()
- new methods SCIPsepaGetNConssFound() and SCIPsepaGetNDomredsFound()
- new methods SCIPgetVarConflictScore(), and SCIPgetVarConflictScoreCurrentRun()
- new method SCIPvarSetData()
- new method SCIPcreateUnknownSol()
- primal solutions may now contain values marked to be unknown (value is SCIP_UNKNOWN); unknown values don't contribute
  to the objective value of the solution; an unknown solution value should be treated as an arbitrary value in the
  variable's bounds, e.g., in the calculation of the feasibility of a constraint, a value inside the variable's bounds
  should be selected that makes the constraint as feasible as possible
- new method SCIPgetNConflictClausesFoundNode()
- new methods SCIPvarSetDelorigData(), SCIPvarSetTransData(), and SCIPvarSetDeltransData()
- new method SCIPvarHasBinaryImplic()
- renamed method SCIPgetNGlobalConss() to SCIPgetNConss()